[package]
name = "file_sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.43.0"
tokio = { version = "1.17.0", features = ["full"] }
async-trait = "0.1.53"
futures = "0.3.21"
structopt = "0.3.21"
env_logger = "0.9.0"
# async-std = { version = "1.11.0", features = ["attributes"] }
