[package]
name = "file_transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
libp2p = { version = "0.43.0", features = ["tcp-tokio", "floodsub", "mplex", "noise", "mdns"] }
tokio = { version = "1.17.0", features = ["io-std", "macros", "rt-multi-thread"] }
env_logger = "0.9.0"
